// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KogitoEmptyState component tests Info test 1`] = `
<div>
  <div
    class="pf-l-bullseye"
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <h5
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-3"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          No child process instances
        </h5>
        <div
          class="pf-c-empty-state__body"
        >
          This process has no related sub processes
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KogitoEmptyState component tests Refresh test 1`] = `
<div>
  <div
    class="pf-l-bullseye"
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <h5
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-4"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          No child process instances
        </h5>
        <div
          class="pf-c-empty-state__body"
        >
          This process has no related sub processes
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`KogitoEmptyState component tests Reset test 1`] = `
<div>
  <div
    class="pf-l-bullseye"
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <h5
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          No child process instances
        </h5>
        <div
          class="pf-c-empty-state__body"
        >
          This process has no related sub processes
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Reset to default
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`KogitoEmptyState component tests Search test 1`] = `
<div>
  <div
    class="pf-l-bullseye"
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-empty-state"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <h5
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          No child process instances
        </h5>
        <div
          class="pf-c-empty-state__body"
        >
          This process has no related sub processes
        </div>
      </div>
    </div>
  </div>
</div>
`;
